Fix for code smells (#215)
* Fixed code smells
* Fixed CSVFormat deprecations
* Switching to ci.jenkins.io